2006-08-15 17:50-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormWrapperLoader.m: Correct problem introduced in 
	previous commit in [GormWrapperLoader loadFileWrapper: 
	withDocument:];
	
2006-08-15 02:16-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormFilePrefsManager.h: Add declaration for
	nibDataWithOpenObjects:
	* GormCore/GormFilePrefsManager.m: Rename nibData to 
	nibDataWithOpenObjects:
	* GormCore/GormNibWrapperBuilder.m: Create the IBOpenObjects
	list in buildWrapper...
	* GormCore/GormResource.m: Properly assign the data to the ivar
	in initWithData:...
	* GormCore/GormWrapperBuilder.m: Correct image loading and saving
	issue.
	* GormCore/GormWrapperLoader.m: Correct image problem.

2006-08-14 21:48-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormNibWrapperBuilder.m: Properly encode oids as
	integers in -[NSIBObjectData initWithDocument:] since bug#17426
	is corrected.

2006-08-14 01:04-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormNibWrapperBuilder.m: Temporary workaround in 
	-[NSIBObjectData initWithDocument:] until 17426 is resolved.

2006-08-13 21:48-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormNibWrapperBuilder.m: Correct issue which was
	causing IB to complain about the File's Owner not having
	an oid in [NSIBObjectData initWithDocument:].
	* GormCore/GormWrapperBuilder.m: Correct issue discovered by
	Benhur Stein that was causing images not to be saved in the
	wrapper correctly in buildFileWrapperDictionaryWithDocument:
	* Gorm.m: Remove uneeded application:openFile: method which was
	commented out.

2006-08-11 11:13-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormDocumentController.m: Default backing store changed
	in newDocument: to NSBackingStoreBuffered instead of 
	NSBackingStoreRetained.

2006-08-11 01:53-EDT Gregory John Casamento <greg_casamento@yahoo.com>
